[package]
name = "hyle-ndc-dataset"
version = "0.1.0"
edition = "2021"
description = "Native hyle struct generation from ndc qmaps"

[dependencies]
hyle = { path = "../../crates/hyle" }
qmap = { package = "qmap-rs", path = "../../../libqmap/rust-bindings" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
libc = "0.2"
