[package]
name = "hyle-dioxus-example"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "hyle-dioxus-example"
path = "src/main.rs"

[features]
default = ["server"]
server = ["dioxus/server"]

[dependencies]
dioxus = { workspace = true, features = ["html", "macro", "signals", "router"] }
dioxus-fullstack-core = { version = "=0.7.7" }
hyle = { path = "../../crates/hyle" }
hyle-dioxus = { path = "../../crates/hyle-dioxus" }
hyle-dioxus-native = { path = "../../crates/hyle-dioxus-native" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { workspace = true, features = ["fullstack", "server"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
hyle-dioxus = { path = "../../crates/hyle-dioxus", features = ["axum"] }
dioxus-fullstack = { version = "=0.7.7" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Window", "Location"] }
dioxus = { workspace = true, features = ["web", "fullstack"] }
dioxus-fullstack = { version = "=0.7.7" }
